# YodaPy

./: .gitignore  .mergify.yml  .travis.yml  Pipfile  config.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  yodapy.py
.github/: dependabot.yml
app/: __init__.py  bot.py  errors.py  forms.py  geo_code.py  parser.py  routes.py  wiki_search.py
app/static/css/: mini-nerd-fonts.css  nerd-fonts.css  star-jedi.css  style.css
app/static/js/: botmap.js  feed.js  post.js  script.js
app/static/json/: keywords.json  question_keywords.json  yoda.json
app/templates/: _message.html  base.html  index.html
app/templates/errors/: 404.html  405.html  500.html
report/: report.md
tests/: test_api.py  test_config.py  test_geo_code.py  test_parser.py  test_wiki_search.py
