[tool.poetry]
name = "p7-yodapy"
version = "0.1.0"
description = ""
authors = ["Guillaume <7831777+GuillaumeOj@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.3"
black = "^20.8b1"
pytest = "^6.1.0"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
gunicorn = "^20.0.4"
doq = "^0.6.3"
python-dotenv = "^0.14.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
